--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -11,53 +11,50 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="900.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="javafx.controller.MainController">
+<VBox prefHeight="900.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx.controller.MainController">
     <MenuBar>
         <Menu mnemonicParsing="false" text="Edycja">
-            <MenuItem mnemonicParsing="false" onAction="#menuItemDbConnection_onAction"
-                      text="Połączenie z bazą danych"/>
+            <MenuItem mnemonicParsing="false" onAction="#menuItemDbConnection_onAction" text="Połączenie z bazą danych" />
         </Menu>
     </MenuBar>
-    <HBox alignment="CENTER" prefHeight="70.0" prefWidth="200.0"
-          style="-fx-background-color: grey; -fx-border-width: 1; -fx-border-color: #000;"
-          styleClass="appThemeContainer" stylesheets="@../css/application_style.css">
+    <HBox alignment="CENTER" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: grey; -fx-border-width: 1; -fx-border-color: #000;" styleClass="appThemeContainer" stylesheets="@../css/application_style.css">
         <VBox.margin>
-            <Insets left="10.0" right="10.0" top="10.0"/>
+            <Insets left="10.0" right="10.0" top="10.0" />
         </VBox.margin>
-        <ImageView fitHeight="112.0" fitWidth="308.0" pickOnBounds="true" preserveRatio="true"
-                   style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 20, 0.4, 0, 0);">
+        <ImageView fitHeight="112.0" fitWidth="308.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 20, 0.4, 0, 0);">
             <HBox.margin>
-                <Insets bottom="5.0" top="5.0"/>
+                <Insets bottom="5.0" top="5.0" />
             </HBox.margin>
-            <Image url="@../image/app_logo_white.png"/>
+            <Image url="@../image/app_logo_white.png" />
         </ImageView>
     </HBox>
     <VBox style="-fx-effect: dropshadow(three-pass-box,  grey, 15, 0.5, 0, 1); -fx-background-color: black;">
         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0"/>
+            <Insets bottom="10.0" left="10.0" right="10.0" />
         </VBox.margin>
-        <Label alignment="CENTER" prefHeight="17.0" prefWidth="100000.0"
-               text="Aplikacja bazodanowa przeznaczona do klasyfikowania bakterii o zadanym genotypie" textFill="WHITE">
+        <Label alignment="CENTER" prefHeight="17.0" prefWidth="100000.0" text="Aplikacja bazodanowa przeznaczona do klasyfikowania bakterii o zadanym genotypie" textFill="WHITE">
             <font>
-                <Font name="System Bold" size="13.0"/>
+                <Font name="System Bold" size="13.0" />
             </font>
             <VBox.margin>
-                <Insets/>
+                <Insets />
             </VBox.margin>
         </Label>
         <HBox alignment="CENTER">
             <Label alignment="CENTER" prefHeight="17.0" text="Status połączenia:" textFill="WHITE">
                 <font>
-                    <Font name="System Bold" size="13.0"/>
+                    <Font name="System Bold" size="13.0" />
                 </font>
+            <HBox.margin>
+               <Insets top="-4.0" />
+            </HBox.margin>
             </Label>
             <Label fx:id="labelDbConnectionStatus" alignment="CENTER" prefHeight="17.0" text="offline" textFill="RED">
                 <font>
-                    <Font name="System Bold" size="13.0"/>
+                    <Font name="System Bold" size="13.0" />
                 </font>
                 <HBox.margin>
-                    <Insets left="5.0"/>
+                    <Insets left="5.0" top="-4.0" />
                 </HBox.margin>
             </Label>
         </HBox>
