--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -1,62 +1,335 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="900.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafx.controller.MainController">
+<VBox prefHeight="900.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="javafx.controller.MainController">
     <MenuBar>
         <Menu mnemonicParsing="false" text="Edycja">
-            <MenuItem mnemonicParsing="false" onAction="#menuItemDbConnection_onAction" text="Połączenie z bazą danych" />
+            <MenuItem mnemonicParsing="false" onAction="#menuItemDbConnection_onAction"
+                      text="Połączenie z bazą danych"/>
         </Menu>
     </MenuBar>
-    <HBox alignment="CENTER" prefHeight="70.0" prefWidth="200.0" style="-fx-background-color: grey; -fx-border-width: 1; -fx-border-color: #000;" styleClass="appThemeContainer" stylesheets="@../css/application_style.css">
+    <HBox alignment="CENTER" prefHeight="70.0" prefWidth="200.0"
+          style="-fx-background-color: grey; -fx-border-width: 1; -fx-border-color: #000;"
+          styleClass="appThemeContainer" stylesheets="@../css/application_style.css">
         <VBox.margin>
-            <Insets left="10.0" right="10.0" top="10.0" />
+            <Insets left="10.0" right="10.0" top="10.0"/>
         </VBox.margin>
-        <ImageView fitHeight="112.0" fitWidth="308.0" pickOnBounds="true" preserveRatio="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 20, 0.4, 0, 0);">
+        <ImageView fitHeight="112.0" fitWidth="308.0" pickOnBounds="true" preserveRatio="true"
+                   style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 20, 0.4, 0, 0);">
             <HBox.margin>
-                <Insets bottom="5.0" top="5.0" />
+                <Insets bottom="5.0" top="5.0"/>
             </HBox.margin>
-            <Image url="@../image/app_logo_white.png" />
+            <Image url="@../image/app_logo_white.png"/>
         </ImageView>
     </HBox>
     <VBox style="-fx-effect: dropshadow(three-pass-box,  grey, 15, 0.5, 0, 1); -fx-background-color: black;">
         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" />
+            <Insets bottom="10.0" left="10.0" right="10.0"/>
         </VBox.margin>
-        <Label alignment="CENTER" prefHeight="17.0" prefWidth="100000.0" text="Aplikacja bazodanowa przeznaczona do klasyfikowania bakterii o zadanym genotypie" textFill="WHITE">
+        <Label alignment="CENTER" prefHeight="17.0" prefWidth="100000.0"
+               text="Aplikacja bazodanowa przeznaczona do klasyfikowania bakterii o zadanym genotypie" textFill="WHITE">
             <font>
-                <Font name="System Bold" size="13.0" />
+                <Font name="System Bold" size="13.0"/>
             </font>
             <VBox.margin>
-                <Insets />
+                <Insets/>
             </VBox.margin>
         </Label>
         <HBox alignment="CENTER">
             <Label alignment="CENTER" prefHeight="17.0" text="Status połączenia:" textFill="WHITE">
                 <font>
-                    <Font name="System Bold" size="13.0" />
+                    <Font name="System Bold" size="13.0"/>
                 </font>
-            <HBox.margin>
-               <Insets top="-4.0" />
-            </HBox.margin>
+                <HBox.margin>
+                    <Insets top="-4.0"/>
+                </HBox.margin>
             </Label>
             <Label fx:id="labelDbConnectionStatus" alignment="CENTER" prefHeight="17.0" text="offline" textFill="RED">
                 <font>
-                    <Font name="System Bold" size="13.0" />
+                    <Font name="System Bold" size="13.0"/>
                 </font>
                 <HBox.margin>
-                    <Insets left="5.0" top="-4.0" />
+                    <Insets left="5.0" top="-4.0"/>
                 </HBox.margin>
             </Label>
         </HBox>
     </VBox>
+    <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+        <VBox.margin>
+            <Insets bottom="14.0"/>
+        </VBox.margin>
+        <Region prefHeight="200.0" prefWidth="14.0"/>
+        <VBox prefHeight="854.0" prefWidth="460.0"
+              style="-fx-background-color: #000; -fx-effect: dropshadow(two-pass-box, #848484, 0, 0.5, -4, 5);"
+              HBox.hgrow="ALWAYS">
+            <HBox alignment="CENTER" style="-fx-background-color: grey;">
+                <VBox.margin>
+                    <Insets left="3.0" right="3.0" top="3.0"/>
+                </VBox.margin>
+                <Label text="Sklasyfikowany zbiór bakterii" textFill="WHITE">
+                    <font>
+                        <Font size="16.0"/>
+                    </font>
+                </Label>
+            </HBox>
+            <HBox style="-fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 15, 0.0 , 0 , 2 );"
+                  VBox.vgrow="ALWAYS">
+                <VBox.margin>
+                    <Insets left="3.0" right="3.0" top="3.0"/>
+                </VBox.margin>
+                <TableView fx:id="tableViewExaminedBacteria"
+                           onMouseClicked="#tableViewExaminedBacteria_onMouseClicked" prefHeight="200.0"
+                           prefWidth="200.0" HBox.hgrow="SOMETIMES">
+                    <columns>
+                        <TableColumn fx:id="tableColumnExaminedBacteria_Genotype" prefWidth="75.0" text="Genotyp"/>
+                        <TableColumn fx:id="tableColumnExaminedBacteria_Class" prefWidth="75.0" text="Klasa"/>
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                    </columnResizePolicy>
+                </TableView>
+            </HBox>
+            <HBox>
+                <VBox.margin>
+                    <Insets bottom="3.0" left="3.0" right="3.0"/>
+                </VBox.margin>
+                <HBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="200.0"
+                      style="-fx-background-color: #545469;" HBox.hgrow="SOMETIMES">
+                    <Button minHeight="25.0" minWidth="90.0" mnemonicParsing="false"
+                            onAction="#buttonWriteToXml_onAction" prefHeight="25.0" prefWidth="140.0"
+                            style="-fx-background-color: #268798; -fx-background-radius: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);"
+                            text="Zapisz do pliku .xml" textFill="WHITE">
+                        <font>
+                            <Font name="System Bold" size="12.0"/>
+                        </font>
+                        <cursor>
+                            <Cursor fx:constant="HAND"/>
+                        </cursor>
+                        <HBox.margin>
+                            <Insets top="13.0"/>
+                        </HBox.margin>
+                    </Button>
+                </HBox>
+            </HBox>
+            <HBox alignment="CENTER" style="-fx-background-color: grey;">
+                <VBox.margin>
+                    <Insets left="3.0" right="3.0"/>
+                </VBox.margin>
+                <Label text="Historia klasyfikacji zaznaczonej bakterii" textFill="WHITE">
+                    <font>
+                        <Font size="16.0"/>
+                    </font>
+                </Label>
+            </HBox>
+            <HBox style="-fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 15, 0.0 , 0 , 2 );">
+                <TableView fx:id="tableViewHistory" prefHeight="296.0" prefWidth="771.0" HBox.hgrow="SOMETIMES">
+                    <columns>
+                        <TableColumn fx:id="tableColumnHistory_Date" prefWidth="75.0" text="Data klasyfikacji"/>
+                        <TableColumn fx:id="tableColumnHistory_Genotype" prefWidth="75.0" text="Genotyp"/>
+                        <TableColumn fx:id="tableColumnHistory_Alpha" maxWidth="2000.0" prefWidth="75.0" text="Alpha"/>
+                        <TableColumn fx:id="tableColumnHistory_Beta" maxWidth="2000.0" prefWidth="75.0" text="Beta"/>
+                        <TableColumn fx:id="tableColumnHistory_Gamma" maxWidth="2000.0" prefWidth="75.0" text="Gamma"/>
+                        <TableColumn fx:id="tableColumnHistory_Class" maxWidth="2000.0" prefWidth="75.0" text="Klasa"/>
+                    </columns>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                    </columnResizePolicy>
+                    <HBox.margin>
+                        <Insets left="3.0" right="3.0"/>
+                    </HBox.margin>
+                </TableView>
+            </HBox>
+            <HBox>
+                <HBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="200.0"
+                      style="-fx-background-color: #545469;" HBox.hgrow="SOMETIMES">
+                    <HBox.margin>
+                        <Insets bottom="3.0" left="3.0" right="3.0"/>
+                    </HBox.margin>
+                    <Button minHeight="25.0" minWidth="90.0" mnemonicParsing="false"
+                            onAction="#buttonDisplayWholeHistory_onAction" prefHeight="25.0" prefWidth="230.0"
+                            style="-fx-background-color: #268798; -fx-background-radius: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);"
+                            text="Wyświetl historię wszystkich bakterii" textFill="WHITE">
+                        <font>
+                            <Font name="System Bold" size="12.0"/>
+                        </font>
+                        <cursor>
+                            <Cursor fx:constant="HAND"/>
+                        </cursor>
+                        <HBox.margin>
+                            <Insets top="13.0"/>
+                        </HBox.margin>
+                    </Button>
+                </HBox>
+            </HBox>
+        </VBox>
+        <Separator orientation="VERTICAL" prefHeight="730.0" prefWidth="15.0" HBox.hgrow="ALWAYS">
+            <HBox.margin>
+                <Insets left="1.5"/>
+            </HBox.margin>
+        </Separator>
+        <VBox HBox.hgrow="ALWAYS">
+            <VBox prefHeight="854.0" prefWidth="460.0"
+                  style="-fx-background-color: #000; -fx-effect: dropshadow(two-pass-box, #848484, 0, 0.5, 4, 5);">
+                <HBox alignment="CENTER" style="-fx-background-color: grey;">
+                    <VBox.margin>
+                        <Insets left="3.0" right="3.0" top="3.0"/>
+                    </VBox.margin>
+                    <Label text="Klasyfikuj genotyp" textFill="WHITE">
+                        <font>
+                            <Font size="16.0"/>
+                        </font>
+                    </Label>
+                </HBox>
+                <HBox>
+                    <VBox.margin>
+                        <Insets left="3.0" right="3.0" top="3.0"/>
+                    </VBox.margin>
+                    <VBox alignment="CENTER" style="-fx-background-color: #545469;" HBox.hgrow="ALWAYS">
+                        <HBox.margin>
+                            <Insets/>
+                        </HBox.margin>
+                        <padding>
+                            <Insets bottom="3.0" left="10.0" right="10.0" top="3.0"/>
+                        </padding>
+                        <HBox alignment="TOP_CENTER" prefHeight="29.0" prefWidth="254.0">
+                            <Label prefHeight="17.0" prefWidth="200.0" text="Genotyp:" textFill="WHITE">
+                                <HBox.margin>
+                                    <Insets top="13.0"/>
+                                </HBox.margin>
+                            </Label>
+                            <VBox>
+                                <HBox.margin>
+                                    <Insets top="8.0"/>
+                                </HBox.margin>
+                                <TextField fx:id="textFieldGenotype" prefHeight="25.0" prefWidth="300.0"
+                                           style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 20, 0, 0, 0); -fx-background-radius: 20;"/>
+                                <Label fx:id="labelGenotype" text="Podaj genotyp bakterii."
+                                       textFill="#0083f9"/>
+                            </VBox>
+                        </HBox>
+                    </VBox>
+                    <VBox alignment="CENTER" style="-fx-background-color: #545469;">
+                        <HBox.margin>
+                            <Insets left="3.0"/>
+                        </HBox.margin>
+                        <Button minHeight="21.0" minWidth="90.0" mnemonicParsing="false"
+                                onAction="#buttonClassify_onAction" prefHeight="25.0" prefWidth="130.0"
+                                style="-fx-background-color: #268798; -fx-background-radius: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);"
+                                text="Klasyfikuj" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0"/>
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="HAND"/>
+                            </cursor>
+                            <VBox.margin>
+                                <Insets bottom="10.0" left="20.0" right="20.0" top="10.0"/>
+                            </VBox.margin>
+                        </Button>
+                        <Button minHeight="21.0" minWidth="90.0" mnemonicParsing="false"
+                                onAction="#buttonAddToList_onAction" prefHeight="25.0" prefWidth="130.0"
+                                style="-fx-background-color: #268798; -fx-background-radius: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);"
+                                text="Dodaj do listy" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0"/>
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="HAND"/>
+                            </cursor>
+                            <VBox.margin>
+                                <Insets bottom="10.0" top="5.0"/>
+                            </VBox.margin>
+                        </Button>
+                    </VBox>
+                </HBox>
+                <HBox alignment="CENTER" style="-fx-background-color: grey;">
+                    <VBox.margin>
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
+                    </VBox.margin>
+                    <Label text="Bakterie oczekujące na klasyfikację" textFill="WHITE">
+                        <font>
+                            <Font size="16.0"/>
+                        </font>
+                    </Label>
+                </HBox>
+                <HBox style="-fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.7) , 15, 0.0 , 0 , 2 );"
+                      VBox.vgrow="SOMETIMES">
+                    <TableView fx:id="tableViewUnclassifiedBacteria" prefWidth="771.0" HBox.hgrow="SOMETIMES">
+                        <columns>
+                            <TableColumn fx:id="tableColumnUnclassifiedBacteria_Genotype" prefWidth="75.0"
+                                         text="Genotyp"/>
+                            <TableColumn fx:id="tableColumnUnclassifiedBacteria_Alpha" maxWidth="2000.0"
+                                         prefWidth="75.0" text="Alpha"/>
+                            <TableColumn fx:id="tableColumnUnclassifiedBacteria_Beta" maxWidth="2000.0"
+                                         prefWidth="75.0" text="Beta"/>
+                            <TableColumn fx:id="tableColumnUnclassifiedBacteria_Gamma" maxWidth="2000.0"
+                                         prefWidth="75.0" text="Gamma"/>
+                        </columns>
+                        <columnResizePolicy>
+                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                        </columnResizePolicy>
+                        <HBox.margin>
+                            <Insets left="3.0" right="3.0"/>
+                        </HBox.margin>
+                    </TableView>
+                </HBox>
+                <HBox>
+                    <HBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="200.0"
+                          style="-fx-background-color: #545469;" HBox.hgrow="SOMETIMES">
+                        <HBox.margin>
+                            <Insets bottom="3.0" left="3.0" right="3.0"/>
+                        </HBox.margin>
+                        <Button minHeight="25.0" minWidth="90.0" mnemonicParsing="false"
+                                onAction="#buttonClassifyAllBacteria_onAction" prefHeight="25.0" prefWidth="189.0"
+                                style="-fx-background-color: #268798; -fx-background-radius: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);"
+                                text="Klasyfikuj wszystkie bakterie" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0"/>
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="HAND"/>
+                            </cursor>
+                            <HBox.margin>
+                                <Insets top="13.0"/>
+                            </HBox.margin>
+                        </Button>
+                        <Button minHeight="25.0" minWidth="90.0" mnemonicParsing="false"
+                                onAction="#buttonDeleteSelectedUnclassifiedBacteria_onAction" prefHeight="25.0"
+                                prefWidth="189.0"
+                                style="-fx-background-color: #268798; -fx-background-radius: 20; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);"
+                                text="Usuń zaznaczoną bakterię" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0"/>
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="HAND"/>
+                            </cursor>
+                            <HBox.margin>
+                                <Insets left="20.0" top="13.0"/>
+                            </HBox.margin>
+                        </Button>
+                    </HBox>
+                </HBox>
+            </VBox>
+        </VBox>
+        <Region prefHeight="200.0" prefWidth="14.0"/>
+    </HBox>
 </VBox>
